trunk/Archive2/13/3d85f989111988/output
main.cpp:1:0: error: unterminated #ifndef
 #ifndef MATRIX_H
 ^
main.cpp:11:11: error: declaration of 'class T'
  template<class T>
           ^
main.cpp:7:11: error:  shadows template parm 'class T'
 template <class T>
           ^
main.cpp:13:11: error: declaration of 'class T'
  template<class T>
           ^
main.cpp:7:11: error:  shadows template parm 'class T'
 template <class T>
           ^
main.cpp:16:44: error: declaration of 'Matrix<T> U'
  friend Matrix<U> operator*(U n, Matrix<U> U);
                                            ^
main.cpp:15:11: error:  shadows template parm 'class U'
  template<class U>
           ^
main.cpp:23:11: error: declaration of 'class T'
 template <class T>
           ^
main.cpp:7:11: error:  shadows template parm 'class T'
 template <class T>
           ^
main.cpp:24:44: error: 'Matrix<T> Matrix<T>::operator++(const Matrix<T>&, T)' must take either zero or one argument
 Matrix<T> operator++(const Matrix<T> & m, T)
                                            ^
main.cpp:40:11: error: declaration of 'class T'
 template <class T>
           ^
main.cpp:7:11: error:  shadows template parm 'class T'
 template <class T>
           ^
main.cpp:41:44: error: 'Matrix<T> Matrix<T>::operator--(const Matrix<T>&, T)' must take either zero or one argument
 Matrix<T> operator--(const Matrix<T> & m, T)
                                            ^
main.cpp:55:1: error: expected '}' at end of input
 }
 ^
main.cpp:55:1: error: expected unqualified-id at end of input
